--- a/.github/workflows/requeriments_backend.yml
+++ b/.github/workflows/requeriments_backend.yml
@@ -1,25 +1,16 @@
-sonar:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - name: Download coverage report
-      uses: actions/download-artifact@v3
-      with:
-        name: lcov-report
-        path: coverage
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        args: >
-          -Dsonar.branch.target=${{ env.branch_default }}
-          -Dsonar.branch.name=${{ env.branch_default }}
-    - name: SonarCloud Verify results
-      shell: bash
-      run: |
-        state_sonar=$(curl --location --request GET 'https://sonarcloud.io/api/qualitygates/project_status?projectKey=your-clock_${{ env.project_name }}&branch=${{ env.branch_default }}' | jq '.projectStatus.status')
-        if [ "$state_sonar" != "\"OK\"" ]; then echo "Quality Gate with state: $state_sonar"; exit 1; else echo "Quality Gate OK"; exit 0; fi
+sonarcloud:
+  runs-on: ubuntu-latest
+  steps:
+  - uses: actions/checkout@v4
+    with:
+      fetch-depth: 0
+  - name: Analyze with SonarCloud
+    uses: sonarsource/sonarcloud-github-action@master
+    with:
+      projectBaseDir: src
+      args: >
+        -Dsonar.organization=pawsly-connect
+        -Dsonar.projectKey=pawsly-connect
+        -Dsonar.sources=lib/
+        -Dsonar.test.exclusions=tests/**
+        -Dsonar.tests=tests/
