--- a/.github/workflows/requirements_backend.yml
+++ b/.github/workflows/requirements_backend.yml
@@ -32,5 +32,5 @@ jobs:
     - name: SonarCloud Verify results
       shell: bash
       run: |
-        state_sonar=$(curl --location --request GET 'https://sonarcloud.io/api/qualitygates/project_status?projectKey=${{ inputs.organization }}_${{ inputs.project-name }}&branch=${{ github.event.pull_request.head.ref }}' | jq '.projectStatus.status')
+        state_sonar=$(curl --location --request GET 'https://sonarcloud.io/api/qualitygates/project_status?projectKey=${{ inputs.project-key }}&branch=${{ github.event.pull_request.base.ref }}' | jq '.projectStatus.status')
         if [ "$state_sonar" != "\"OK\"" ]; then echo "Quality Gate with state: $state_sonar"; exit 1; else echo "Quality Gate OK"; exit 0; fi
