--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -108,7 +108,7 @@ jobs:
             - name: Configure AWS Credentials
               uses: aws-actions/configure-aws-credentials@v2
               with:
-                role-to-assume: ${{ inputs.role-assume }}
+                role-to-assume: ${{ vars.AWS_ROLE_DEPLOY_BACKEND }}
                 aws-region: ${{ inputs.aws-region }}
             - name: Deploy AWS Lambda
               env:
