--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -109,7 +109,7 @@ jobs:
             - name: Configure AWS Credentials
               uses: aws-actions/configure-aws-credentials@v2
               with:
-                role-to-assume: ${{ vars.AWS_ROLE_DEPLOY_BACKEND }}
+                role-to-assume: ${{ vars.AWS_ROLE_DEPLOY_FRONTEND }}
                 aws-region: ${{ inputs.aws-region }}
             - name: Deploy S3 Bucket
               env:
