--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -117,9 +117,9 @@ jobs:
                 APP_NAME: ${{ inputs.frontend-name }}
                 AWS_REGION: ${{ inputs.aws-region }}
                 BUILD_FOLDER: ${{ inputs.build-folder }}
-                VERSION: ${{ inputs.version }}
               run: |
-                RELEASE_NAME="date_$(TZ=America/Bogota date '+%Y-%m-%d-%H:%M-%Z')-version"
+                VERSION=$(node -p "require('./package.json').version")
+                RELEASE_NAME="date_$(TZ=America/Bogota date '+%Y-%m-%d-%H:%M-%Z')-version_$VERSION"
                 aws s3 sync $BUILD_FOLDER s3://$BUCKET_NAME/$APP_NAME/release/$RELEASE_NAME --delete --region us-east-1 || exit 1
                 aws s3 sync s3://$BUCKET_NAME/$APP_NAME/release/$RELEASE_NAME s3://$BUCKET_NAME/$APP_NAME/app --delete --region us-east-1 || exit 1
             - name: Cache Invalidation
@@ -127,6 +127,3 @@ jobs:
                 DISTRIBUTION_ID: ${{ inputs.distribution-id }}
               run: |
                 aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
-                
-
-
