--- a/.github/workflows/requirements_backend.yml
+++ b/.github/workflows/requirements_backend.yml
@@ -14,10 +14,33 @@ on:
         type: string
 
 jobs:
-  sonarcloud:
+  test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+      - name: Install and build tests
+        shell: bash
+        run: npm ci && npm run test:coverage
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: lcov-report
+          retention-days: 1
+          path: coverage/lcov.info
+  sonarcloud:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
     - uses: actions/checkout@v4
+    - name: Download coverage report
+      uses: actions/download-artifact@v3
+      with:
+        name: lcov-report
+        path: coverage
     - name: Analyze with SonarCloud
       uses: sonarsource/sonarcloud-github-action@master
       env:
