--- a/.github/workflows/requirements_backend.yml
+++ b/.github/workflows/requirements_backend.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 20.x
       - name: Install and build tests
         shell: bash
-        run: npm ci && ${{ inputs.command_test }}
+        run: npm ci && ${{ inputs.command-test }}
       - name: Upload coverage report
         uses: actions/upload-artifact@v3
         with:
